2012-12-07  Alan Modra  <amodra@gmail.com>

	PR ld/14926
	* elf.c (_bfd_elf_map_sections_to_segments): Include elf header
	size when determining phdr_in_segment.

2012-12-06  Yufeng Zhang  <yufeng.zhang@arm.com>

	* elf64-aarch64.c (elf64_aarch64_grok_prstatus): New function.
	(elf_backend_grok_prstatus): Define to elf64_aarch64_grok_prstatus.

2012-12-06  Alan Modra  <amodra@gmail.com>

	* elfxx-mips.c (allocate_dynrelocs): Correct test for symbol
	defined in a regular file to include common symbols.

2012-12-05  Leif Ekblad  <leif@rdos.net>

	* config.bfd: Add x86_64-*-rdos.

2012-12-05  Alan Modra  <amodra@gmail.com>

	* elf64-ppc.c (build_plt_stub): Fix off by one error in branch
	to glink.

2012-12-03  Maciej W. Rozycki  <macro@codesourcery.com>

	PR ld/10629
	* elfxx-mips.c (mips_elf_link_hash_table): Update comment for
	use_rld_obj_head.
	(_bfd_mips_elf_create_dynamic_sections): Always create a
	.rld_map section if no __rld_obj_head symbol has been seen.

2012-12-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* elf32-mips.c (mips_elf32_object_p): Return right away when the
	ABI is not compatible.
	* elfn32-mips.c (mips_elf_n32_object_p): Likewise.

2012-12-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* elf32-tilepro.c (tilepro_elf_mkobject): New function.
	(bfd_elf32_mkobject): New macro.

2012-12-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* elf32-mips.c (bfd_elf32_mkobject): New macro.
	* elf64-mips.c (bfd_elf64_mkobject): Likewise.
	* elfn32-mips.c (bfd_elf32_mkobject): Likewise.
	* elfxx-mips.h (_bfd_mips_elf_mkobject): New prototype.
	* elfxx-mips.c (mips_elf_obj_tdata): New struct.
	(mips_elf_tdata): New macro.
	(_bfd_mips_elf_mkobject): New function.
	(mips_elf_merge_obj_attributes): Report the originating input BFD
	on attribute conflicts.

2012-12-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* elfxx-mips.c (mips_elf_merge_obj_attributes): Correct messages
	for the -mdouble-float and -msingle-float cases throughout; make