@@ -1,3 +1,9 @@
+2012-12-09  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/14933
+	* archive.c (bsd_write_armap): Properly check indicies bigger
+	than 4Gb.
+
 2012-12-07  Alan Modra  <amodra@gmail.com>
 
 	PR ld/14926
